# gameengine

./: .clang-format  .clang-tidy  .gitignore  .ignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  compile_flags.txt
assets/fonts/: pico8.ttf.rsrc
assets/scripts/: level1.lua  level1__.lua  level2.lua
cmake/: LinkSDL2.cmake
config/: main.lua  physics2d.yaml  video.yaml
engine/: .clang-format  CMakePresets.json  build.sh
engine/cmake/: LinkSDL.cmake
engine/config/: engine_input.yaml  video.yaml
engine/modules/lua_scripting/: entity_script.lua
engine/shaders/: primitives.vert  sprite.frag  sprite.vert
engine/src/: CMakeLists.txt  Engine.cpp  Engine.h  Main.cpp
engine/src/core/: Assert.h  Config.cpp  Filesystem.cpp  Filesystem.h  Locator.h  Math.h  StringId.cpp  StringId.h  Window.cpp  Window.h
engine/src/debug/: DevGui.cpp  DevGui.h
engine/src/events/: EventBus.h  Events.h
engine/src/game/: Scene.cpp  Scene.h  SceneLoader.h  Systems.cpp  Systems.h
engine/src/input/: InputCallback.cpp  InputCommand.h  InputConfig.h  InputConfigLoader.h  InputHandler.cpp  InputHandler.h  InputScope.cpp  InputValue.h
engine/src/physics/2d/: PhysicsEngine2D.cpp  PhysicsEngine2D.h
engine/src/renderer/: Camera.h  Renderer2D.cpp  Shader.cpp  ShaderManager.cpp  ShaderManager.h  Shapes.h
engine/src/resources/: Font.cpp  ResourceManager.cpp
engine/src/scene/: Entity.h  Scene.cpp  SceneLoader.cpp  ScriptInstance.cpp  Systems.cpp
libs/: CMakeLists.txt  build-libs.sh
libs/rapidhash/include/rapidhash/: rapidhash.h
modules/lua_scripting/: entity_script.lua  utils.lua
resources/scenes/: scene1.lua  scene1.yaml
resources/scripts/: level0.lua  level1.lua  level2.lua
resources/scripts/player/: player_controller.lua
resources/shaders/: primitives.frag  primitives.vert  sprite.vert
samples/space-war/resources/input/: game_input.yaml
samples/space-war/resources/scenes/: scene1.yaml
samples/space-war/resources/scripts/player/: player_controller.lua
src/: CMakeLists.txt  Main.cpp  game.cpp  game.h  logger.h  main.cpp
src/assets/: AssetManager.cpp  AssetManager.h  AssetType.h
src/core/: Config.cpp  Config.h  Filesystem.cpp  Filesystem.h  Game.cpp  Game.h  Hash.h  IO.cpp  IO.h  Input.h  Locator.h  Logger.cpp  Logger.h  Math.h  Renderer.cpp  Renderer.h  StringId.cpp  StringId.h  Timer.cpp  Timer.h  Window.cpp  Window.h
src/debug/: DevGui.cpp  DevGui.h
src/events/: EventBus.h  Events.h
src/game/: Components.h  ECS.cpp  ECS.h  Entity.cpp  Entity.h  Events.h  Game.cpp  Game.h  LevelLoader.cpp  LevelLoader.h  Scene.cpp  Scene.h  SceneData.h  SceneLoader.cpp  SceneLoader.h  Script.cpp  Script.h  ScriptClass.h  ScriptInstance.cpp  ScriptInstance.h  ScriptingApi.h  Systems.cpp  Systems.h
src/input/: Command.cpp  Command.h  Input.cpp  Input.h  InputBinding.h  InputCallback.cpp  InputCallback.h  InputCommand.h  InputCommandMapping.cpp  InputCommandMapping.h  InputConfig.h  InputConfigLoader.cpp  InputConfigLoader.h  InputDevice.h  InputHandler.cpp  InputHandler.h  InputScope.cpp  InputScope.h  InputValue.h
src/physics/2d/: Body2D.cpp  Body2D.h  PhysicsEngine2D.cpp  PhysicsEngine2D.h
src/renderer/: Camera.cpp  Camera.h  Color.h  Font.cpp  Font.h  Rect.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  Shader.cpp  Shader.h  ShaderManager.cpp  ShaderManager.h  Shapes.h  Texture.cpp  Texture.h
src/resources/: AssetStore.cpp  AssetStore.h  Font.h  ResourceManager.cpp  ResourceManager.h  ResourceType.h  Texture.cpp  Texture.h  Texture2D.cpp  Texture2D.h
src/scene/: Components.h  ECS.cpp  ECS.h  MovementSystem.h  Systems.cpp  Systems.h  TransformComponent.h
src/tools/: DevGui.cpp  DeveloperModeGui.cpp  DeveloperModeGui.h
